<?xml version="1.0" encoding="utf-8"?>
<!--TODO make pretty-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/test_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tap_test_time_remaining"
            android:textSize="50sp"
            android:gravity="center"
            android:textStyle="bold"
            android:id="@+id/finger_tap_test_timer_textView"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/finger_tap_test_start_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="fingerTapButtonHandler"
            android:padding="15dp"
            android:text="@string/tap_test_save_results"
            android:textSize="15sp"
            android:hapticFeedbackEnabled="true"/>
    </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left_taps_text"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/left_taps_number"
                    android:id="@+id/left_tap_textView"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginLeft="30dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/right_taps_text"
                    android:gravity="right"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/right_taps_number"
                    android:id="@+id/right_tap_textView"/>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/left_tap_test_button"
                android:theme="@style/SecondaryButton"
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:gravity="center"
                android:text="@string/left_tap_button_text"
                android:layout_marginStart="20dp"
                android:elevation="100dp"
                android:onClick="leftTap"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">
            <Button
                android:id="@+id/right_tap_test_button"
                android:theme="@style/SecondaryButton"
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:gravity="center"
                android:text="@string/right_tap_button_text"
                android:onClick="rightTap"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>